--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,4 +259,6 @@
     <string name="text_not_enable">Not enable</string>
     <string name="text_add_wakeup_shortcut_to_launcher">添加唤醒到桌面快捷方式</string>
     <string name="text_add_shortcut_to_launcher">添加到桌面快捷方式</string>
+    <string name="text_auto_open_voice_wakeup_charging">充电时自动开启语音唤醒</string>
+    <string name="key_auto_open_voice_wakeup_charging" translatable="false">auto_open_voice_wakeup_charging</string>
 </resources>
