--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -196,5 +196,6 @@
     <string name="text_add_wakeup_shortcut_to_launcher">添加桌面唤醒快捷方式</string>
     <string name="text_add_shortcut_to_launcher">添加到桌面快捷方式</string>
     <string name="text_auto_open_voice_wakeup_charging">充电时自动开启语音唤醒</string>
+    <string name="text_only_cloud_parse">仅使用云解析</string>
 
 </resources>
