编辑器加入函数grid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,4 +268,6 @@
     <string name="text_hot_key_desc">快捷键</string>
     <string name="text_customize_wakeup_words">自定义唤醒词</string>
     <string name="key_wakeup_file_path" translatable="false">wakeup_file_path</string>
+    <string name="text_vosp">VOSP</string>
+    <string name="text_vosp_summary">加入开源工程</string>
 </resources>
