--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,4 +270,9 @@
     <string name="key_wakeup_file_path" translatable="false">wakeup_file_path</string>
     <string name="text_vosp">VOSP</string>
     <string name="text_vosp_summary">加入开源工程</string>
+    <string name="text_lua_editor">Lua编辑器</string>
+    <string name="text_js_editor">Js编辑器</string>
+    <string name="text_select_nothing">未选择任何内容</string>
+    <string name="text_copied">已复制</string>
+    <string name="key_auto_update_data" translatable="false">auto_update_data</string>
 </resources>
