--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="title_advanced_settings">Advanced Setting</string>
 
     <string-array name="list_pos_of_regex_param" translatable="false">
-        <item>无</item>
+        <!--<item>无</item>-->
         <item>第一个</item>
         <item>第二个</item>
         <item>第三个</item>
@@ -286,4 +286,5 @@
     <string name="key_speak_response_word_on_voice_wakeup" translatable="false">speak_response_word_on_voice_wakeup</string>
     <string name="key_stream_of_syn_output" translatable="false">stream_of_syn_output</string>
     <string name="desc_accessibility">开启后将后的技能\n1.使用音量快捷键\n2.操作界面\n3.根据当前界面响应指令</string>
+    <string name="key_auto_open_as_with_root" translatable="false">auto_open_as_with_root</string>
 </resources>
