在[文字提取]加入分词功能 离线命令词，识别联系人，和应用更准确 支持阿拉伯数字与中文模糊匹配

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <string-array name="list_auto_sleep_duration">
+        <item>30分钟</item>
+        <item>1小时</item>
+        <item>2小时</item>
+        <item>5小时</item>
+    </string-array>
+
     <string name="text_permission_manager">权限管理</string>
     <string name="app_name">V Assistant</string>
     <string name="simple_test_script">简单顺序脚本测试</string>
