--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -214,5 +214,6 @@
     <string name="text_select_nothing">未选择任何内容</string>
     <string name="text_copied">已复制</string>
     <string name="desc_accessibility">开启后将后的技能\n1.使用音量快捷键\n2.操作界面\n3.根据当前界面响应指令</string>
+    <string name="text_update_log">更新日志</string>
 
 </resources>
