加入自动检查更新 加入青云客对话系统 加入语音唤醒自动休眠后亮屏后自动开启

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,4 +297,6 @@
     <string name="key_volume_wakeup_when_screen_off" translatable="false">volume_wakeup_when_screen_off</string>
     <string name="key_auto_sleep_wakeup_duration" translatable="false">auto_sleep_wakeup_duration</string>
     <string name="text_update_log">Update log</string>
+    <string name="key_open_chat_system" translatable="false">open_chat_system</string>
+    <string name="key_open_voice_wakeup_if_auto_sleep" translatable="false">open_voice_wakeup_if_auto_sleep</string>
 </resources>
