--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,11 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="list_chat_system" translatable="false">
+        <item>青云客</item>
+        <item>图灵机器人</item>
+    </string-array>
+
     <string-array name="list_stream_syn_output" translatable="false">
         <item>媒体音量</item>
         <item>铃声音量</item>
@@ -299,4 +304,5 @@
     <string name="text_update_log">Update log</string>
     <string name="key_open_chat_system" translatable="false">open_chat_system</string>
     <string name="key_open_voice_wakeup_if_auto_sleep" translatable="false">open_voice_wakeup_if_auto_sleep</string>
+    <string name="key_chat_system_type" translatable="false">chat_system_type</string>
 </resources>
