--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,5 +304,7 @@
     <string name="text_update_log">Update log</string>
     <string name="key_open_chat_system" translatable="false">open_chat_system</string>
     <string name="key_open_voice_wakeup_if_auto_sleep" translatable="false">open_voice_wakeup_if_auto_sleep</string>
+    <string name="key_continuous_dialogue" translatable="false">continuous_dialogue</string>
     <string name="key_chat_system_type" translatable="false">chat_system_type</string>
+    <string name="text_set_priority">设置优先级</string>
 </resources>
