--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -315,4 +315,6 @@
     <string name="key_exec_failed_voice_feedback" translatable="false">exec_failed_voice_feedback</string>
     <string name="key_exec_succ_feedback" translatable="false">exec_succ_feedback</string>
     <string name="key_user_wakeup_word" translatable="false">user_wakeup_word</string>
+    <string name="key_fix_voice_micro" translatable="false">fix_voice_micro</string>
+    <string name="key_close_wakeup_notification" translatable="false">close_wakeup_notification</string>
 </resources>
