--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -49,7 +49,7 @@
     <string name="text_store">商城</string>
     <string name="text_me">我</string>
     <string name="test_set_script">选择脚本</string>
-    <string name="text_confirm">确认</string>
+    <string name="text_confirm">确定</string>
     <string name="text_cancel">取消</string>
     <string name="text_from_file">选择文件</string>
     <string name="text_open_failed">打开失败</string>
