--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
     <string name="text_vibrate_reco_begin">开始识别时震动</string>
     <string name="text_net_err">Network error</string>
     <string name="key_login_info" translatable="false">login_info</string>
+    <string name="key_long_key_press_delay" translatable="false">long_key_press_delay</string>
     <string name="key_show_prompt_inapp_as_global_dialog" translatable="false">show_prompt_inapp_as_global_dialog</string>
     <string name="text_action_title">Action title</string>
     <string name="hint_example">打电话给xxx \n呼叫xxx</string>
