--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,7 +196,7 @@
     <string name="text_failed_to_get_user_info">Failed to get user info</string>
     <string name="text_purchase_recharge_code">Purchase Recharge code</string>
     <string name="text_purchase_recharge_code_msg">1.联系qq获取（推荐）\n2.通过支付宝转账下方指定金额，在备注填写你的邮箱，不久你会收到含有充值码的邮件\n点击下方[使用充值码]继续操作即可。</string>
-    <string name="text_advan_include_func">
+    <string name="text_advan_include_func" translatable="false">
         1.新建脚本指令\n
         2.远程调试脚本\n
         3.去广告次数跳无限制\n
@@ -204,6 +204,7 @@
         5.无限制标记管理\n
         6.操作、标记分享，且可同步恢复\n
         7.无限制屏幕识别/文字识别
+        8.图灵机器人聊天系统
     </string>
     <string name="text_recharege_pre_read">在支付前，请先阅读高级教程，确保它对你有用。</string>
     <string name="text_email_copy_to_clip">你的邮箱已复制到剪切板</string>
