--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,15 +228,13 @@
     <string name="text_purchase_recharge_code">Purchase Recharge code</string>
     <string name="text_purchase_recharge_code_msg">1.联系qq获取（推荐）\n2.通过支付宝转账下方指定金额，在备注填写你的邮箱，不久你会收到含有充值码的邮件\n点击下方[使用充值码]继续操作即可。</string>
     <string name="text_advan_include_func" translatable="false">
-        1.新建脚本指令\n
-        2.远程调试脚本\n
-        3.去广告次数跳无限制\n
-        4.本地代码测试\n
-        5.无限制标记管理\n
-        6.操作、标记分享，且可同步恢复\n
-        7.无限制屏幕识别/文字识别\n
-        8.图灵机器人聊天系统\n
-        9.无限制屏幕文字翻译
+        1.去广告次数跳无限制\n
+        2.无限制标记管理\n
+        3.无限制文字提取\n
+        4.无限制屏幕文字翻译\n
+        5.操作、标记分享，且可同步恢复\n
+        6.无限制屏幕识别/文字识别\n
+        7.更聪明更快的图灵机器人聊天系统
     </string>
     <string name="text_recharege_pre_read">在支付前，请先阅读高级教程，确保它对你有用。</string>
     <string name="text_email_copy_to_clip">你的邮箱已复制到剪切板</string>
@@ -267,7 +265,7 @@
     <string name="text_unlock">Unlock</string>
     <string name="text_need_unlock">Partial function need to unlock.</string>
     <string name="text_add_regex">Add regex</string>
-    <string name="summary_not_vip_remove_ad">非高级用户，一天最多去广告20次</string>
+    <string name="summary_not_vip_remove_ad">非高级用户，一天最多去广告5次</string>
     <string name="text_open">Open</string>
     <string name="text_unlock_functions">Unlock functions</string>
     <string name="text_guide">Guide</string>
