加入长语音 修复开启提示音部分情况不识别问题 ProgressTextDialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,5 +368,6 @@
     <string name="key_remove_ad_power_saving_mode" translatable="false">remove_ad_power_saving_mode</string>
     <string name="key_accessibility_service_power_saving_mode" translatable="false">accessibility_service_power_saving_mode</string>
     <string name="key_translate_languages" translatable="false">translate_languages</string>
+    <string name="key_lasting_voice_command" translatable="false">lasting_voice_command</string>
     <string name="text_plugins_manager" translatable="false">插件管理</string>
 </resources>
