修复一加5/5t 安卓P版本在最近任务页面卡顿问题 移除青云客对话系统 修复speak后无法长语音问题 加入无障碍黑名单[实验室/其他]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
     </string-array>
 
     <string-array name="list_chat_system" translatable="false">
-        <item>青云客</item>
+        <!--<item>青云客</item>-->
         <item>图灵机器人</item>
     </string-array>
 
@@ -244,7 +244,6 @@
         4.无限制屏幕文字翻译\n
         5.操作、标记分享，且可同步恢复\n
         6.无限制屏幕识别/文字识别\n
-        7.更聪明更快的图灵机器人聊天系统
     </string>
     <string name="text_recharege_pre_read">在支付前，请先阅读高级教程，确保它对你有用。</string>
     <string name="text_email_copy_to_clip">你的邮箱已复制到剪切板</string>
