加入插件检查更新 修复长语音定时问题 去除无障碍低电量模式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -378,6 +378,7 @@
     <string name="key_accessibility_service_power_saving_mode" translatable="false">accessibility_service_power_saving_mode</string>
     <string name="key_translate_languages" translatable="false">translate_languages</string>
     <string name="key_lasting_voice_command" translatable="false">lasting_voice_command</string>
+    <string name="key_auto_check_plugin_update" translatable="false">auto_check_plugin_update</string>
     <string name="key_float_voice_align" translatable="false">float_voice_align</string>
     <string name="key_lasting_voice_millis" translatable="false">lasting_voice_millis</string>
     <string name="text_plugins_manager" translatable="false">插件管理</string>
