--- a/executorengine/src/main/res/values/strings.xml
+++ b/executorengine/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ExecutorEngine</string>
-    <string name="text_app_not_install">The app isn\'t install</string>
-    <string name="text_not_fount_email_app">Not found email app</string>
-    <string name="text_failed_to_open_email_app">Failed to open email app</string>
+    <string name="text_app_not_install" translatable="false">未安装该应用</string>
+    <string name="text_not_fount_email_app" translatable="false">未找到邮件应用</string>
+    <string name="text_failed_to_open_email_app" translatable="false">唤起邮件应用失败</string>
 </resources>
