ViewFinderBuilder加入文字长度条件 修复网页元素id 条件查找
- 解决保存截图时图库不显示问题
- 加入语音唤醒状态改变通知震动反馈
- 语音唤醒休眠添加10/20分钟选项
- 修改文字提取界面Ui

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string-array name="list_auto_sleep_duration">
+        <item>10分钟</item>
+        <item>20分钟</item>
         <item>30分钟</item>
         <item>1小时</item>
         <item>2小时</item>
