加入 ‘一键设置助手应用’ 快捷方式 修复应用安装卸载监听器

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -201,6 +201,7 @@
     <string name="text_faq">常见问题</string>
     <string name="text_check_last_data">检查最新数据</string>
     <string name="shortcut_wakeup">唤醒</string>
+    <string name="shortcut_label_set_assist_app">一键设为助手应用</string>
     <string name="text_not_enable">未启用</string>
     <string name="text_add_wakeup_shortcut_to_launcher">添加桌面唤醒快捷方式</string>
     <string name="text_add_shortcut_to_launcher">添加到桌面快捷方式</string>
