加入语音输入 待测试 支持语音搜索

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -27,7 +27,7 @@
     <string name="text_activity_name">Activity名称</string>
     <string name="text_activity_name_op">Activity名称(可选)</string>
     <string name="text_choose_file">选择文件</string>
-    <string name="text_operation_need_permission">此操作需要%s</string>
+    <string name="text_operation_need_permission">此操作需要[%s]</string>
     <string name="text_opened">已开启</string>
     <string name="text_to_open">去开启</string>
     <string name="text_regular_expression">正则表达式</string>
