支持语音搜索 修改屏幕助手UI 加入兼容模式[设置/语音唤醒](不支持耳机麦克风) 加入状态栏语音唤醒快捷设置 加入语音输入

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,6 +326,7 @@
     <string name="key_last_sync_marked_ad_date" translatable="false">last_sync_marked_ad_date</string>
     <string name="shortcut_wakeup">WakeUp</string>
     <string name="text_switch_voice_wp" translatable="false">切换语音唤醒</string>
+    <string name="text_voice_wp" translatable="false">语音唤醒</string>
     <string name="shortcut_label_set_assist_app">Set Assist App</string>
     <string name="text_not_enable">Not enable</string>
     <string name="text_add_wakeup_shortcut_to_launcher">添加桌面唤醒快捷方式</string>
