--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -391,4 +391,5 @@
     <string name="key_lasting_voice_millis" translatable="false">lasting_voice_millis</string>
     <string name="key_voice_recog_compatible_mode" translatable="false">voice_recog_compatible_mode</string>
     <string name="text_plugins_manager" translatable="false">插件管理</string>
+    <string name="key_chat_str" translatable="false">chat_str</string>
 </resources>
