优化截屏速度 修复分词选择错位

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -178,7 +178,7 @@
     <string name="text_check_for_updates">检查更新</string>
     <string name="text_contact_me">联系我</string>
     <string name="text_advanced_user_guide">高级使用手册</string>
-    <string name="text_service_manual">使用手册</string>
+    <string name="text_user_manual">使用手册</string>
     <string name="text_laboratory">实验室</string>
     <string name="text_feedback">反馈与建议</string>
     <string name="text_wakeup_way">唤醒方式</string>
