添加语音唤醒不自动休眠选项 修复百度语音识别引擎在开启长语音时,开始识别后立即停止识别无回调导致的悬浮窗不关闭问题 简单优化内存

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,6 +8,7 @@
         <item>1小时</item>
         <item>2小时</item>
         <item>5小时</item>
+        <item>不自动休眠</item>
     </string-array>
 
     <string name="text_permission_manager">权限管理</string>
