添加语音唤醒不自动休眠选项 修复百度语音识别引擎在开启长语音时,开始识别后立即停止识别无回调导致的悬浮窗不关闭问题 简单优化内存使用

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -391,6 +391,7 @@
     <string name="key_float_voice_align" translatable="false">float_voice_align</string>
     <string name="key_lasting_voice_millis" translatable="false">lasting_voice_millis</string>
     <string name="key_voice_recog_compatible_mode" translatable="false">voice_recog_compatible_mode</string>
+    <string name="key_has_nav_bar" translatable="false">has_nav_bar</string>
     <string name="text_plugins_manager" translatable="false">插件管理</string>
     <string name="key_chat_str" translatable="false">chat_str</string>
 </resources>
