--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -191,7 +191,7 @@
     <string name="text_long_press_to_export_log">查看日志，长按导出日志</string>
     <string name="text_send">发送</string>
     <string name="text_feedback_title_hint">问题或建议描述</string>
-    <string name="text_explore_log">查看日志</string>
+    <string name="text_browse_log">查看日志</string>
     <string name="text_modify_user_name">修改用户名</string>
     <string name="text_modify_failed">修改失败</string>
     <string name="text_modify_pass">修改密码</string>
@@ -226,5 +226,6 @@
     <string name="text_update_log">更新日志</string>
     <string name="text_set_priority">设置优先级</string>
     <string name="desc_new_account">新用户将获得7天高级用户免费体验资格</string>
+    <string name="text_close">关闭</string>
 
 </resources>
