- 文字OCR截图时释放cap - 连接蓝牙耳机时，播放识别音效 - 提供屏幕助手功能活动（可通过Xposed Edge等扩展调用活动快捷方式来启动） - 新增设置[实验室/屏幕助手/长按HOME键] 用于设置长按HOME键触发的功能

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -227,5 +227,6 @@
     <string name="text_set_priority">设置优先级</string>
     <string name="desc_new_account">新用户将获得7天高级用户免费体验资格</string>
     <string name="text_close">关闭</string>
+    <string name="label_screen_assistant">屏幕助手</string>
 
 </resources>
