悬浮面板揭露动画，列表可搜索，关闭应用加入root方式 修复waitHide 添加waitHideUnsafely 添加息屏语音唤醒通知 获取联系人问题 修改网络请求

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -228,5 +228,6 @@
     <string name="desc_new_account">新用户将获得7天高级用户免费体验资格</string>
     <string name="text_close">关闭</string>
     <string name="label_screen_assistant">屏幕助手</string>
+    <string name="alias_regex">别名（正则式）</string>
 
 </resources>
