--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,7 +167,6 @@
     <string name="text_disconnect_with_debugger">Disconnect remote debugger</string>
     <string name="text_add_follow_action">Add follow action</string>
     <string name="text_parent_action">Parent action:</string>
-    <string name="key_audio_speak" translatable="false">audio_speak</string>
     <string name="text_executing">Executing</string>
     <string name="text_parsing">In parsing</string>
     <string name="text_listening">Listening</string>
@@ -299,6 +298,7 @@
     <string name="text_check_for_updates">Check for updates</string>
     <string name="text_contact_me">联系我</string>
     <string name="text_contact_email" translatable="false">vove7@qq.com</string>
+    <string name="text_contact_qq" translatable="false">qq: 529545532</string>
     <string name="text_advanced_user_guide">Advanced user guide</string>
     <string name="text_user_manual">Service manual</string>
     <string name="text_laboratory">Laboratory</string>
