--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,17 +241,15 @@
     <string name="text_purchase_recharge_code">Purchase Recharge code</string>
     <string name="text_purchase_recharge_code_msg" translatable="false">
         1.联系qq获取（推荐）\n
-        2.通过支付宝转账下方指定金额，在备注填写你的邮箱，不久你会收到含有充值码的邮件\n
+        2.通过支付宝转账下方指定金额，在备注填写你的邮箱，不久你会收到含有充值码的邮件(很久未收到邮件，请联系QQ)\n
         3.点击下方[使用充值码]继续操作即可。\n
         另外，如果你可以为VOSP做出贡献，可成为永久高级会员。
     </string>
     <string name="text_advan_include_func" translatable="false">
         1.去广告次数跳无限制\n
-        2.无限制标记管理\n
-        3.无限制文字提取\n
-        4.无限制屏幕文字翻译\n
-        5.操作、标记分享，且可同步恢复\n
-        6.无限制屏幕识别/文字识别\n
+        2.无限制文字提取\n
+        3.无限制屏幕文字翻译\n
+        4.无限制屏幕识别/文字识别\n
     </string>
     <string name="text_recharege_pre_read">在支付前，请先阅读高级教程，确保它对你有用。</string>
     <string name="text_email_copy_to_clip">你的邮箱已复制到剪切板</string>
