--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -229,5 +229,6 @@
     <string name="text_close">关闭</string>
     <string name="label_screen_assistant">屏幕助手</string>
     <string name="alias_regex">别名（正则式）</string>
+    <string name="text_mail_help">发送后请在收件箱中查看邮件，注意查看邮件是否被收进[垃圾箱]，若无法收到，可使用QQ与我联系，谢谢:)</string>
 
 </resources>
