--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -407,4 +407,5 @@
     <string name="text_close">Close</string>
     <string name="label_screen_assistant">Screen Assistant</string>
     <string name="alias_regex">别名（正则式）</string>
+    <string name="text_mail_help">发送后请在收件箱中查看邮件，注意查看邮件是否被收进[垃圾箱]，若无法收到，可使用QQ与我联系，谢谢:)</string>
 </resources>
