支持配置百度语音合成离线资源

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -298,7 +298,7 @@
     <string name="text_contact_email" translatable="false">vove7@qq.com</string>
     <string name="text_contact_qq" translatable="false">qq: 529545532</string>
     <string name="text_advanced_user_guide">Advanced user guide</string>
-    <string name="text_user_manual">Service manual</string>
+    <string name="text_user_manual">User manual</string>
     <string name="text_laboratory">Laboratory</string>
     <string name="text_feedback">Feedback</string>
     <string name="key_long_press_volume_up_wake_up" translatable="false">long_press_volume_up_wake_up</string>
