--- a/Backup/说明.md
+++ b/Backup/说明.md
@@ -3,9 +3,10 @@
 |文件|说明|
 |--|--|
 |bd_etts_text.dat|语音合成离线资源|
-|libbd_etts.so|语音合成离线资源|
-|libbdtts.so |语音合成离线资源|
-|libgnustl_shared.so|语音合成离线资源|
+
+|libbd_etts.so|语音合成离线so|
+|libbdtts.so |语音合成离线so|
+|libgnustl_shared.so|语音合成离线so|
 
 ### 离线发音人资源
 
