--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -38,6 +38,11 @@
     </string-array>
 
 
+    <string-array name="list_speech_engine" translatable="false">
+        <item>百度语音</item>
+        <item>讯飞语音</item>
+    </string-array>
+
     <string-array name="list_float_voice_align" translatable="false">
         <item>居中</item>
         <item>靠左</item>
