--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,17 +23,25 @@
     <string-array name="voice_model_entities" translatable="false">
         <item>普通女声</item>
         <item>普通男声</item>
-        <!--<item>特别男声</item>-->
         <item>度逍遥</item>
         <item>度丫丫</item>
+        <item>度博文</item>
+        <item>度小童</item>
+        <item>度小萌</item>
+        <item>度米朵</item>
+        <item>度小娇</item>
     </string-array>
     <string name="default_voice_model" translatable="false">0</string>
     <string-array name="voice_model_values" translatable="false">
         <item>0</item>
         <item>1</item>
-        <!--<item>2</item>-->
         <item>3</item>
         <item>4</item>
+        <item>106</item>
+        <item>110</item>
+        <item>111</item>
+        <item>103</item>
+        <item>5</item>
     </string-array>
 
     <string-array name="list_script_type" translatable="false">
