--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -50,12 +50,10 @@
     </string-array>
 
     <string-array name="list_auto_sleep_duration">
+        <item>1 minutes</item>
+        <item>5 minutes</item>
         <item>10 minutes</item>
-        <item>20 minutes</item>
         <item>30 minutes</item>
-        <item>1 hours</item>
-        <item>2 hours</item>
-        <item>5 hours</item>
         <item>Does not automatically sleep</item>
     </string-array>
 
@@ -95,7 +93,6 @@
     <string name="key_resume_bkg_music" translatable="false">resume_bkg_music</string>
     <string name="key_reco_when_wakeup_assist" translatable="false">reco_when_wakeup_assist</string>
     <string name="key_use_assist_service" translatable="false">use_assist_service</string>
-    <string name="key_finish_word" translatable="false">finish_word</string>
     <string name="key_exec_failed_voice_feedback" translatable="false">exec_failed_voice_feedback</string>
     <string name="key_voice_recog_feedback" translatable="false">voice_recog_feedback</string>
     <string name="key_exec_succ_feedback" translatable="false">exec_succ_feedback</string>
@@ -118,6 +115,8 @@
     <string name="key_continuous_dialogue" translatable="false">continuous_dialogue</string>
     <string name="key_chat_system_type" translatable="false">chat_system_type</string>
     <string name="key_home_fun" translatable="false">home_fun</string>
+    <string name="key_home_system_config" translatable="false">home_system_config</string>
+    <string name="key_home_system" translatable="false">home_system</string>
     <string name="key_fp_animation" translatable="false">fp_animation</string>
     <string name="key_notify_wp_on_screen_off" translatable="false">notify_wp_on_screen_off</string>
     <string name="key_dev_mode" translatable="false">dev_mode</string>
