--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="key_chat_system_type" translatable="false">chat_system_type</string>
     <string name="key_home_fun" translatable="false">home_fun</string>
     <string name="key_home_system_config" translatable="false">home_system_config</string>
+    <string name="key_home_system_user_command" translatable="false">home_system_user_command</string>
     <string name="key_home_system" translatable="false">home_system</string>
     <string name="key_fp_animation" translatable="false">fp_animation</string>
     <string name="key_notify_wp_on_screen_off" translatable="false">notify_wp_on_screen_off</string>
