--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -125,7 +125,7 @@
     <string name="key_home_system_user_command" translatable="false">home_system_user_command</string>
     <string name="key_home_system" translatable="false">home_system</string>
     <string name="key_panel_style" translatable="false">panel_style</string>
-    <string name="key_fp_animation" translatable="false">fp_animation</string>
+    <string name="key_default_fp_animation" translatable="false">fp_animation</string>
     <string name="key_notify_wp_on_screen_off" translatable="false">notify_wp_on_screen_off</string>
     <string name="key_dev_mode" translatable="false">dev_mode</string>
 
@@ -175,6 +175,14 @@
     <string name="key_open_app_compat" translatable="false">open_app_compat</string>
     <string name="key_xunfei_speech_key" translatable="false">xunfei_speech_key</string>
     <string name="key_recog_wait_duration" translatable="false">recog_wait_duration</string>
+
+    <string name="key_extension_power_indicator" translatable="false">extension_power_indicator</string>
+
+
+    <string name="key_full_power_hint_text" translatable="false">full_power_hint_text</string>
+    <string name="key_low_power_hint_text" translatable="false">low_power_hint_text</string>
+    <string name="key_charging_hint_text" translatable="false">charging_hint_text</string>
+
 
 
 </resources>
